--- a/popup.html
+++ b/popup.html
@@ -1,147 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
     <title>FREE COURSES</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
+    <!-- Main container -->
     <div class="container">
-        <div class="items-head">
-            <div id="date" class="glow mini"></div>
+      <div class="items-head">
+        <div id="date" class="glow mini"></div>
+      </div>
+      <!-- Course Body -->
+      <div class="items">
+        <!-- All the course content would be populated here -->
+
+        <!-- Course body sample -->
+
+        <!-- <div class="items-head">
+            <p>COURSE: (num)</p>
+            <hr />
           </div>
-
-        <div class="items">
-
-            <div class="items-head">
-                <p>COURSE: 1</p>
-                <hr>
+          <div class="items-body">
+            <div class="items-body-content">
+              <a id="course1" class="course" href="#" target="_blank"
+                >Loading..</a
+              >
             </div>
+          </div> -->
 
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course1" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
 
-            </div>
-
-            <div class="items-head">
-                <p>COURSE: 2</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course2" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 3</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course3" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 4</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 5</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 6</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 7</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 8</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 9</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-            <div class="items-head">
-                <p>COURSE: 10</p>
-                <hr>
-            </div>
-
-            <div class="items-body">
-                <div class="items-body-content">
-                    <a id="course4" class="course" href="#" target="_blank">Loading..</a>
-                    <i class="fa fa-angle-right"></i>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</body>
-<script src="app.js"></script>
-
+      </div> <!-- End of course body -->
+    </div> <!-- End of main container -->
+  </body>
+  <script src="app.js"></script>
 </html>
