--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./Assets/images/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./Assets/styles/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>FREE COURSES</title>
   </head>
 
@@ -37,5 +36,5 @@
       </div> <!-- End of course body -->
     </div> <!-- End of main container -->
   </body>
-  <script src="./Assets/js/app.js"></script>
+  <script src="./app.js"></script>
 </html>
